--- a/test/parser/__snapshots__/css.test.ts.yml
+++ b/test/parser/__snapshots__/css.test.ts.yml
@@ -1,3 +1,174 @@
+Tools / AtRule wrap properties / css / 0: |-
+  @font-face {
+    font-family: Proxima Nova;
+    font-weight: 400;
+    src: url(/fonts/proxima-nova/400-regular.woff) format("woff");
+  }
+Tools / Deep Nesting / css / 0: |-
+  #header .navigation {
+    font-size: 12px;
+  }
+  #header .navigation .logo {
+    width: 300px;
+    height: 200px;
+  }
+  #header .navigation .logo .abc {
+    color: white;
+  }
+  #header {
+    color: black;
+  }
+Tools / Directives and Functions / css / 0: |-
+  .container {
+    width: 100%;
+    margin-right: auto;
+    margin-left: auto;
+    padding-right: 1rem;
+    padding-left: 1rem;
+    font-weight: 700 !important;
+    --tw-text-opacity: 1;
+    color: rgba(17, 24, 39, var(--tw-text-opacity));
+  }
+  .dark .test {
+    font-weight: 500;
+  }
+  .button:focus {
+    --tw-text-opacity: 1;
+    color: rgba(110, 231, 183, var(--tw-text-opacity));
+  }
+  .link:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgba(239, 68, 68, var(--tw-bg-opacity));
+    opacity: 1;
+  }
+  @media (min-width: 640px) {
+    .container {
+      max-width: 640px;
+    }
+    .test {
+      padding-top: 1px;
+    }
+  }
+  @media (min-width: 768px) {
+    .container {
+      font-size: 1.125rem !important;
+      line-height: 1.75rem !important;
+      max-width: 768px !important;
+    }
+  }
+  @media (min-width: 1024px) {
+    .container {
+      --tw-bg-opacity: 1 !important;
+      background-color: rgba(110, 231, 183, var(--tw-bg-opacity)) !important;
+    }
+    .button:hover {
+      --tw-text-opacity: 1;
+      color: rgba(110, 231, 183, var(--tw-text-opacity));
+    }
+  }
+  @media (prefers-color-scheme: dark) {
+    .test {
+      --tw-bg-opacity: 1;
+      background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
+    }
+  }
+Tools / Keyframes / css / 0: |-
+  @media (prefers-color-scheme: dark) {
+    @media (min-width: 640px) {
+      @keyframes ping {
+        0% {
+          transform: scale(1);
+          opacity: 1;
+        }
+        75%, 100% {
+          transform: scale(2);
+          opacity: 0;
+        }
+      }
+    }
+  }
+Tools / Nested At-Rules / css / 0: |-
+  @media (min-width: 768px) {
+    .test {
+      width: 300px !important;
+    }
+  }
+  @media (min-resolution: 192dpi) {
+    @media (min-width: 768px) {
+      .component {
+        background-image: url(/img/retina2x.png);
+      }
+    }
+  }
+Tools / Nested At-Rules and Bubbling / css / 0: |-
+  .component {
+    width: 300px;
+  }
+  @media (min-width: 768px) {
+    .component {
+      width: 600px;
+    }
+  }
+  @media (min-width: 1280px) {
+    .component {
+      width: 800px;
+    }
+  }
+  @media (min-resolution: 192dpi) {
+    @media (min-width: 768px) {
+      .component {
+        background-image: url(/img/retina2x.png);
+      }
+    }
+  }
+Tools / Nesting / css / 0: |-
+  #header .navigation {
+    font-size: 12px;
+  }
+  #header .logo {
+    width: 300px;
+  }
+  #header {
+    color: black;
+  }
+Tools / One line AtRule / css / 0: |-
+  @import "library";
+  @import "typo.css";
+Tools / Pseudo Classes / css / 0: |-
+  #bundle .button:hover {
+    background-color: white;
+  }
+  #bundle .button::first-line {
+    color: red;
+  }
+  #bundle .button__abc:focus {
+    color: blue;
+  }
+  #bundle .button {
+    display: block;
+    border: 1px solid black;
+    background-color: grey;
+  }
+  #bundle .logo {
+    width: 300px;
+  }
+Tools / Simple atRule / css / 0: |-
+  @media (min-width: 768px) {
+    .test {
+      color: red;
+    }
+  }
+Tools / Single Level / css / 0: |-
+  img, video {
+    max-width: 100%;
+    height: auto;
+  }
+  .navigation {
+    font-size: 12px;
+  }
+  .logo {
+    width: 300px;
+  }
 Tools / apply chain / css / 0: |-
   .base {
     width: 2.25rem;
@@ -24,86 +195,6 @@ Tools / do not change apply order / css / 0: |-
     border-bottom-color: transparent;
     border-left-color: transparent;
   }
-Tools / normal parse / css / 0: |-
-  @charset "utf-8";
-  @tailwind base;
-  @font-face {
-    font-family: Proxima Nova;
-    font-weight: 400;
-    src: url(/fonts/proxima-nova/400-regular.woff) format("woff");
-  }
-  html {
-    line-height: 1.15;
-    -webkit-text-size-adjust: 100%;
-  }
-  img, video {
-    max-width: 100%;
-    height: auto;
-  }
-  .container {
-    width: 100%;
-    margin-right: auto;
-    margin-left: auto;
-    padding-right: 1rem;
-    padding-left: 1rem;
-    @apply font-bold lg:bg-green-300 md:text-lg;
-    @apply text-gray-900;
-    padding: 1rem;
-  }
-  .dtest {
-    @apply font-light !important;
-  }
-  .link:hover {
-    @apply bg-red-500;
-    opacity: 1;
-  }
-  @screen sm {
-    * {
-      padding-top: 1px;
-    }
-  }
-  @media (min-width: 640px) {
-    .container {
-      max-width: 640px;
-      min-width: 640px;
-    }
-  }
-  @media (min-width: 768px) {
-    .container {
-      max-width: 768px;
-    }
-  }
-  @media (prefers-color-scheme: dark) {
-    @media (min-width: 640px) {
-      @keyframes ping {
-        0% {
-          transform: scale(1);
-          opacity: 1;
-          @apply font-bold;
-        }
-        75%, 100% {
-          transform: scale(2);
-          opacity: 0;
-          @apply bg-yellow-300 md:bg-red-500;
-        }
-      }
-    }
-  }
-  @screen dark {
-    .test {
-      @apply bg-gray-300;
-    }
-  }
-  @variants dark {
-    .test {
-      @apply font-medium;
-    }
-  }
-  @variants lg:hover, focus {
-    .button {
-      @apply text-green-300;
-    }
-  }
 Tools / theme function / css / 0: |-
   .btn-blue {
     background-color: #3b82f6;
@@ -113,99 +204,4 @@ Tools / theme function / css / 0: |-
   }
   .content-area2 {
     height: calc(100vh - 4rem);
-  }
-Tools / transform parse / css / 0: |-
-  @charset "utf-8";
-  @tailwind base;
-  @font-face {
-    font-family: Proxima Nova;
-    font-weight: 400;
-    src: url(/fonts/proxima-nova/400-regular.woff) format("woff");
-  }
-  html {
-    line-height: 1.15;
-    -webkit-text-size-adjust: 100%;
-  }
-  img, video {
-    max-width: 100%;
-    height: auto;
-  }
-  .container {
-    width: 100%;
-    margin-right: auto;
-    margin-left: auto;
-    padding-right: 1rem;
-    padding-left: 1rem;
-    font-weight: 700;
-    --tw-text-opacity: 1;
-    color: rgba(17, 24, 39, var(--tw-text-opacity));
-    padding: 1rem;
-  }
-  .dtest {
-    font-weight: 300 !important;
-  }
-  .dark .test {
-    font-weight: 500;
-  }
-  .button:focus {
-    --tw-text-opacity: 1;
-    color: rgba(110, 231, 183, var(--tw-text-opacity));
-  }
-  .link:hover {
-    --tw-bg-opacity: 1;
-    background-color: rgba(239, 68, 68, var(--tw-bg-opacity));
-    opacity: 1;
-  }
-  @media (min-width: 640px) {
-    * {
-      padding-top: 1px;
-    }
-    .container {
-      max-width: 640px;
-      min-width: 640px;
-    }
-  }
-  @media (min-width: 768px) {
-    .container {
-      font-size: 1.125rem;
-      line-height: 1.75rem;
-      max-width: 768px;
-    }
-  }
-  @media (min-width: 1024px) {
-    .container {
-      --tw-bg-opacity: 1;
-      background-color: rgba(110, 231, 183, var(--tw-bg-opacity));
-    }
-    .button:hover {
-      --tw-text-opacity: 1;
-      color: rgba(110, 231, 183, var(--tw-text-opacity));
-    }
-  }
-  @media (prefers-color-scheme: dark) {
-    @media (min-width: 640px) {
-      @keyframes ping {
-        0% {
-          transform: scale(1);
-          opacity: 1;
-          font-weight: 700;
-        }
-        75%, 100% {
-          transform: scale(2);
-          opacity: 0;
-          --tw-bg-opacity: 1;
-          background-color: rgba(252, 211, 77, var(--tw-bg-opacity));
-        }
-        @media (min-width: 768px) {
-          75%, 100% {
-            --tw-bg-opacity: 1;
-            background-color: rgba(239, 68, 68, var(--tw-bg-opacity));
-          }
-        }
-      }
-    }
-    .test {
-      --tw-bg-opacity: 1;
-      background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
-    }
   }
