fix: extend.colors will overwrites default, close #141

--- a/test/processor/__snapshots__/config.test.ts.yml
+++ b/test/processor/__snapshots__/config.test.ts.yml
@@ -159,7 +159,21 @@ Tools / resolveConfig should extend correctly / order / 0: |-
     "none": "0",
     "lg": "44"
   }
-Tools / resolveConfig should not overwrite theme function / extend / 0: |-
+Tools / resolveConfig should not overwrite theme function / extend-colors-red / 1: |-
+  {
+    "50": "#fef2f2",
+    "100": "#fee2e2",
+    "200": "#fecaca",
+    "300": "#fca5a5",
+    "400": "#f87171",
+    "500": "#ef4444",
+    "600": "#dc2626",
+    "700": "#b91c1c",
+    "800": "#991b1b",
+    "900": "#7f1d1d",
+    "custom": "#ea1851"
+  }
+Tools / resolveConfig should not overwrite theme function / extend-width / 0: |-
   {
     "0": "0px",
     "1": "0.25rem",
