--- a/test/style/__snapshots__/prefixer.test.ts.yml
+++ b/test/style/__snapshots__/prefixer.test.ts.yml
@@ -75,14 +75,19 @@ Tools / processor prefix / preflight / 0: |-
     -webkit-text-decoration: underline dotted;
     text-decoration: underline dotted;
   }
-  a {
-    color: inherit;
-    text-decoration: inherit;
-  }
   body {
     margin: 0;
     font-family: inherit;
     line-height: inherit;
+  }
+  html {
+    -webkit-text-size-adjust: 100%;
+    font-family: ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+    line-height: 1.5;
+  }
+  a {
+    color: inherit;
+    text-decoration: inherit;
   }
   b, strong {
     font-weight: bolder;
@@ -122,11 +127,6 @@ Tools / processor prefix / preflight / 0: |-
   fieldset {
     margin: 0;
     padding: 0;
-  }
-  html {
-    -webkit-text-size-adjust: 100%;
-    font-family: ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
-    line-height: 1.5;
   }
   hr {
     height: 0;
@@ -195,4 +195,11 @@ Tools / processor prefix / preflight / 0: |-
   textarea::placeholder {
     opacity: 1;
     color: #9ca3af;
+  }
+Tools / styleSheet prefix / css / 0: |-
+  .flex {
+    display: flex;
+  }
+  .bg-clip-padding {
+    background-clip: padding-box;
   }
