feat: support predefined css variables
```js
// windi.config.js
theme: {
  vars: {
    primary: '#6366f1',
  },
},
```

will add this to base styles

```css
:root {
  --primary: #6366f1;
}
```

--- a/test/processor/__snapshots__/config.test.ts.yml
+++ b/test/processor/__snapshots__/config.test.ts.yml
@@ -315,3 +315,7 @@ Tools / shortcuts config string / shortcuts string / 0: |-
       box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
     }
   }
+Tools / variables theme config / css / 0: |-
+  :root {
+    --primary: #6366f1;
+  }
