--- a/test/processor/__snapshots__/config.test.ts.yml
+++ b/test/processor/__snapshots__/config.test.ts.yml
@@ -140,6 +140,15 @@ Tools / handle nest colors / colors / 0: |-
     --tw-text-opacity: 1;
     color: rgba(255, 255, 255, var(--tw-text-opacity));
   }
+Tools / presets test / css / 0: |-
+  .bg-blue-light {
+    --tw-bg-opacity: 1;
+    background-color: rgba(133, 215, 255, var(--tw-bg-opacity));
+  }
+  .bg-blue-500 {
+    --tw-bg-opacity: 1;
+    background-color: rgba(59, 130, 246, var(--tw-bg-opacity));
+  }
 Tools / resolveConfig should extend correctly / order / 0: |-
   {
     "1": "1",
