fix(completions): clean up DEFAULT

--- a/test/utils/__snapshots__/completions.test.ts.yml
+++ b/test/utils/__snapshots__/completions.test.ts.yml
@@ -1568,7 +1568,7 @@ Tools / completions / color / 2: |-
     "border-blue-gray-700",
     "border-blue-gray-800",
     "border-blue-gray-900",
-    "border-DEFAULT",
+    "border",
     "divide-transparent",
     "divide-current",
     "divide-black",
@@ -1793,7 +1793,7 @@ Tools / completions / color / 2: |-
     "divide-blue-gray-700",
     "divide-blue-gray-800",
     "divide-blue-gray-900",
-    "divide-DEFAULT",
+    "divide",
     "ring-offset-transparent",
     "ring-offset-current",
     "ring-offset-black",
@@ -2018,7 +2018,7 @@ Tools / completions / color / 2: |-
     "ring-offset-blue-gray-700",
     "ring-offset-blue-gray-800",
     "ring-offset-blue-gray-900",
-    "ring-DEFAULT",
+    "ring",
     "ring-transparent",
     "ring-current",
     "ring-black",
