feat: add dumpConfig api

--- a/test/processor/__snapshots__/plugin.test.ts.yml
+++ b/test/processor/__snapshots__/plugin.test.ts.yml
@@ -98,3 +98,8 @@ Tools / addVariant pseudoClass / extend / 0: |-
   .float-right:hover:focus {
     float: right;
   }
+Tools / dump config / css / 0: |-
+  .bg-nord0 {
+    --tw-bg-opacity: 1;
+    background-color: rgba(46, 52, 64, var(--tw-bg-opacity));
+  }
