--- a/package.json
+++ b/package.json
@@ -142,6 +142,7 @@
     "pirates": "^4.0.1",
     "rollup": "^2.37.0",
     "sucrase": "^3.17.1",
+    "tosource": "^2.0.0-alpha.2",
     "tslib": "^2.1.0",
     "typescript": "^4.1.3"
   }
